--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,6 @@
     </div>
 <!-- 
     <script src="gallery-items.js" type="module"></script> -->
-   <script src="mycode.js" type="module"></script>
+   <script src="mycode.js"></script>
   </body>
 </html>
